crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badMaterialBindingAPIApplied.usda
version https://git-lfs.github.com/spec/v1
oid sha256:16e3b6f6f5feb943688b8f7570691617659e05db31baacae495094e5686575fe
size 507
